--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,56 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+html {
+  font-family: "Poppins", sans-serif;
+  font-size: 100%;
+}
+
 .content {
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .checked {
   text-decoration: line-through;
+}
+
+h1 {
+  padding: 20px;
+  font-size: 2rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form input {
+  margin: 20px 20px 0px 20px;
+  padding: 10px 20px;
+  width: 100%;
+  outline: none;
+}
+
+form button {
+  margin: 0px 20px 20px 20px;
+  padding: 10px 20px;
+  border: none;
+  width: 120%;
+  outline: none;
+}
+
+form button:hover {
+  opacity: 0.8;
+}
+
+.content > div {
+  padding: 5px;
+}
+
+.content span {
+  margin: 0px 10px;
 }
